--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tortoiseshell Optics</title>
-    <link href="./resources/css/normalize.css" rel="stylesheet" type="text/css" />
-    <link href="./resources/css/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Tortoiseshell Optics</title>
+  <link href="./resources/css/normalize.css" rel="stylesheet" type="text/css" />
+  <link href="./resources/css/style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <header>
+    <div class="header-bar">
+      <img src="./resources/images/logo-white.png" alt="logo" role="presentation" />
+      <span>Tortoiseshell Optics</span>
+      <nav role="navigation">
+        <ul>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    <h1>Don't just look, see.</h1>
+  </header>
+  <main>
+    <div class="gallery">
+      <figure>
+        <img src="./resources/images/paper-icon.png" alt="paper-icon" role="presentation">
+        <figcaption>Comprehensive Exams</figcaption>
+      </figure>
+      <figure>
+        <img src="./resources/images/ruler-icon.png" alt="ruler-icon" role="presentation">
+        <figcaption>Custom Fittings</figcaption>
+      </figure>
+      <figure>
+        <img src="./resources/images/truck-icon.png" alt="truck-icon" role="presentation">
+        <figcaption>Fast Delivery</figcaption>
+      </figure>
+    </div>
+    <div class="gallery">
+      <div class="gallery-item">
+        <h2>Philosophy</h2>
+        <p>
+          Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.
+        </p>
+      </div>
+      <div class="gallery-item">
+        <h2>Appointments</h2>
+        <p>
+          Schedule an appointment by calling us at (312) 654-0987.
+          We're open Tuesday - Saturday, 9AM - 6PM.
+        </p>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <img src="./resources/images/logo-black.png" alt="logo" role="presentation">
+  </footer>
+</body>
+
 </html>
