make site responsive

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="#">Products</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
+        <span class="menu-button"><a href="#">Menu</a></span>
       </nav>
     </div>
     <div class="heading container">
@@ -46,7 +47,7 @@
         <div class="image-box">
           <img src="./resources/images/truck-icon.png" alt="truck-icon" role="presentation">
         </div>
-        <figcaption>Fast Delivery</figcaption>
+        <figcaption class="last-caption">Fast Delivery</figcaption>
       </figure>
     </div>
     <div class="gallery container">
