structure code with comments

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
   <header>
     <div class="header-bar container">
       <div class="logo-group">
@@ -29,7 +30,9 @@
 
     </div>
   </header>
+
   <main>
+    <!-- gallery with icons -->
     <div class="gallery container">
       <figure>
         <div class="image-box">
@@ -50,6 +53,7 @@
         <figcaption class="last-caption">Fast Delivery</figcaption>
       </figure>
     </div>
+    <!-- gallery with paragraphs -->
     <div class="gallery container">
       <div class="gallery-item">
         <h2>Philosophy</h2>
@@ -65,10 +69,11 @@
       </div>
     </div>
   </main>
+
   <footer class="container">
     <img src="./resources/images/logo-black.png" alt="logo" role="presentation">
     <span>Copyright Tortoiseshell Optics</span>
-</footer>
+  </footer>
 </body>
 
 </html>
