--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0">
   <title>Tortoiseshell Optics</title>
   <link href="./resources/css/normalize.css" rel="stylesheet" type="text/css" />
   <link href="./resources/css/style.css" rel="stylesheet" type="text/css" />
