mobile version done

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
   <header>
     <div class="header-bar">
-      <img src="./resources/images/logo-white.png" alt="logo" role="presentation" />
-      <span>Tortoiseshell Optics</span>
+      <div class="company">
+        <img src="./resources/images/logo-white.png" alt="logo" role="presentation" />
+        <span>Tortoiseshell Optics</span>
+      </div>
+      <span class="menu-button">Menu</span>
       <nav role="navigation">
         <ul>
           <li><a href="#">Services</a></li>
@@ -26,7 +29,7 @@
   <main>
     <div class="gallery">
       <figure>
-        <img src="./resources/images/paper-icon.png" alt="paper-icon" role="presentation">
+        <img class="first-image" src="./resources/images/paper-icon.png" alt="paper-icon" role="presentation">
         <figcaption>Comprehensive Exams</figcaption>
       </figure>
       <figure>
@@ -48,14 +51,16 @@
       <div class="gallery-item">
         <h2>Appointments</h2>
         <p>
-          Schedule an appointment by calling us at (312) 654-0987.
-          We're open Tuesday - Saturday, 9AM - 6PM.
+          Schedule an appointment by calling us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.
         </p>
       </div>
     </div>
   </main>
   <footer>
-    <img src="./resources/images/logo-black.png" alt="logo" role="presentation">
+    <div class="company">
+      <img src="./resources/images/logo-black.png" alt="logo" role="presentation" />
+      <span>Tortoiseshell Optics</span>
+    </div>
   </footer>
 </body>
 
