--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <h1>Don't just look, see.</h1>
   </header>
-  <main>
+  <main class="container">
     <div class="gallery">
       <figure>
         <img class="first-image" src="./resources/images/paper-icon.png" alt="paper-icon" role="presentation">
@@ -57,9 +57,9 @@
     </div>
   </main>
   <footer>
-    <div class="company">
+    <div class="company container">
       <img src="./resources/images/logo-black.png" alt="logo" role="presentation" />
-      <span>Tortoiseshell Optics</span>
+      <span>Copyright Tortoiseshell Optics</span>
     </div>
   </footer>
 </body>
