--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         </ul>
       </nav>
     </div>
-    <h1>Don't just look, see.</h1>
+    <div class="container">
+      <h1>Don't just look, see.</h1>
+    </div>
   </header>
   <main class="container">
     <div class="gallery">
